--- a/productservice/productservice/README
+++ b/productservice/productservice/README
@@ -25,11 +25,10 @@ This project demonstrates a Spring Boot application with Spring Security, custom
 
 | Method | Endpoint                | Description                        | Auth Required | Roles         |
 |--------|-------------------------|------------------------------------|--------------|--------------|
-| GET    | `/`                     | Home page                          | Yes           | -            |
-| POST   | `/login`                | Authenticate user                  | Yes          | -            |
-| POST   | `/registerUser`             | Register new user                  | Yes          | -            |
-| GET    | `/couponapi/coupons/{id}`  | Get coupon by ID                | Yes          | USER, ADMIN |
-| POST   | `/couponapi/coupons`       | Create new coupon               | Yes          | ADMIN       |
+| GET    | `/`                     | Home page                          | Yes          | -            |
+| POST   | `/login`                | Authenticate user                  | Yes           | -            |         |
+| GET    | `/productapi/products/{id}`  | Get product by ID                | Yes          | USER, ADMIN |
+| POST   | `/productapi/products`       | Create new product               | Yes          | ADMIN       |
 
 All endpoints returning HTML use Thymeleaf templates for rendering.
 
@@ -41,7 +40,7 @@ All endpoints returning HTML use Thymeleaf templates for rendering.
 
     ```properties
     # Example properties
-    spring.datasource.url=jdbc:mysql://localhost:3306/coupon_db
+    spring.datasource.url=jdbc:mysql://localhost:3306/product_db
     spring.datasource.username=your_db_user
     spring.datasource.password=your_db_password
 
@@ -54,7 +53,7 @@ All endpoints returning HTML use Thymeleaf templates for rendering.
     ```
 
 4. **Access the app**  
-    Visit [http://localhost:9091](http://localhost:9091)
+    Visit [http://localhost:9090](http://localhost:9090)
 
 ## Security Overview
 
@@ -78,3 +77,6 @@ src/
 
 - Implement a custom `UserDetailsService` to load user-specific data.
 - Configure an `AuthenticationManager` to use authentication provider and custom user details service in `SecurityConfig.java`.
+
+
+
